src/objects/lms_folio_hdr__x.object
<CustomObject>
    <description>lms_folio_hdr</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$lms_folio_hdr</externalName>
    <fields>
        <fullName>c_bill_cd__c</fullName>
        <label>c_bill_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_dept__c</fullName>
        <label>c_compor_dept</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_first_name__c</fullName>
        <label>c_compor_first_name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_gl_cd__c</fullName>
        <label>c_compor_gl_cd</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_last_name__c</fullName>
        <label>c_compor_last_name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_convention_cd__c</fullName>
        <label>c_convention_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_folio_creator_id__c</fullName>
        <label>c_folio_creator_id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <label>c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>c_quality_cd</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_folio_create_timestamp__c</fullName>
        <label>d_folio_create_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_folio_effective_dt__c</fullName>
        <label>d_folio_effective_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_folio_expire_dt__c</fullName>
        <label>d_folio_expire_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_folio_id__c</fullName>
        <label>f_folio_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_reserve_id__c</fullName>
        <label>f_reserve_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_folio_type_id__c</fullName>
        <label>i_folio_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lms_hotel_activity_fk__c</fullName>
        <externalDeveloperName>lms_hotel_activity_fk</externalDeveloperName>
        <label>LMS Hotel Activity</label>
        <length>18</length>
        <referenceTo>lms_hotel_activity__x</referenceTo>
        <relationshipLabel>lms_folio_hdr</relationshipLabel>
        <relationshipName>lms_folio_hdr</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>LMS Folio Hdr</label>
    <pluralLabel>LMS Folio Hdr</pluralLabel>
</CustomObject>